<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BUapp</string>

    <!-- Menu Actions -->
    <string name="menu_action_settings">设置</string>
    <string name="menu_action_user">用户</string>
    <string name="menu_action_login">登录</string>
    <string name="menu_action_refresh">刷新</string>
    <string name="menu_action_post">发表</string>
    <string name="menu_action_reply">回复</string>
    <string name="menu_action_logout">登出</string>
    <string name="menu_action_info">关于</string>
    <string name="menu_action_sharelink">分享</string>
    <string name="menu_open_in_browser">用浏览器打开</string>

    <string name="nettype_in">校园网</string>
    <string name="nettype_out">外网</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="login_progress_signing_in">正在登录</string>
    <string name="error_field_required">内容不能为空</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="read_progress_message">读取中</string>
    <string name="title_activity_settings">设置</string>
    <string name="buapp_client_postfix">\n\n发送自 [url=https://play.google.com/store/apps/details?id=martin.app.bitunion][b]$device_name @BUApp[/b][/url]</string>

    <!-- Network response error -->
    <string name="network_unknown">网络异常</string>
    <string name="network_api_fail">Api error: $api_error</string>

    <!-- Api 错误 -->
    <string name="login_error">登录异常!</string>
    <string name="logout_error">登出异常！</string>

    <!-- Dialog message -->
    <string name="logout_confirm_title">登出</string>
    <string name="logout_confirm_message">确定要登出吗</string>
    <string name="logout_confirm_button">确定</string>
    <string name="logout_cancel_button">取消</string>
    <string name="send_message_title">发送消息</string>
    <string name="send_message_message">确认要发送吗？</string>
    <string name="dialog_button_confirm">确认</string>
    <string name="dialog_button_cancel">取消</string>

    <!-- Toast message -->
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="message_sending">消息发送中...</string>
    <string name="message_sent_fail">发送失败</string>
    <string name="message_sent_success">发送成功</string>
    <string name="thread_url_copied">帖子链接已经复制进剪切板</string>
    <string name="image_url_copied">链接已经复制进剪切板</string>
    <string name="message_cant_be_empty">回复不能为空</string>
    <string name="swipe_right_go_back">再次右滑返回</string>
    <string name="image_attach_fail">无法获取图片</string>
    <string name="image_attached">成功添加图片</string>
    <string name="file_attach_fail">无法获取文件</string>
    <string name="file_attached">成功添加文件</string>

    <string name="title_activity_recent_list">最新帖子</string>

</resources>